<resources>
    <string name="app_name">遊戲積分</string>
    <string name="sum_up">結算</string>
    <string name="new_game_text">重開</string>
    <string name="sum_line">總分</string>
    <string name="remove_line">刪除</string>
    <string name="add_a_game">計</string>
    <string name="action"> + </string>

    <string name="upgrade_a_game">升級</string>
    <string name="default_level"> A </string>
    <string name="tractor_score">本局得分</string>
    <string name="upgrade_game">計分</string>

    <string name="roll_dice"> 碌 </string>
    <string name="reduce_dice"> - </string>
    <string name="add_dice"> + </string>
    <string name="waiting_result">點計算獲取結果。。。</string>
    <string name="compute">計算</string>
    <string name="reset">重置</string>
    <string name="points24_card_1">卡牌 1</string>
    <string name="points24_card_2">卡牌 2</string>
    <string name="points24_card_3">卡牌 3</string>
    <string name="points24_card_4">卡牌 4</string>
</resources>