<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="horizontal">

    <Button
        android:id="@+id/reset_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_text"
        android:textSize="13sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tractor_score"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/upgrade_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:inputType="number"
        android:textColor="#000000" />

    <Button
        android:id="@+id/upgrade_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_game"
        android:textSize="13sp" />

</LinearLayout>